// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TabMenu> should add classes for props 1`] = `
<div
  className="TabMenu TabMenu--gutters"
  role="tablist"
>
  <TabItem
    id="1"
    isActive={false}
    key=".0"
    label="Some tab"
    onClick={[Function]}
  />
  <TabItem
    id="2"
    isActive={true}
    key=".1"
    label="Another tab"
    onClick={[Function]}
  />
</div>
`;

exports[`<TabMenu> should render tab menu wrapper correctly 1`] = `
<div
  className="TabMenu"
  role="tablist"
>
  <TabItem
    id="1"
    isActive={true}
    key=".0"
    label="Some tab"
    onClick={[Function]}
  />
  <TabItem
    id="2"
    isActive={false}
    key=".1"
    label="Another tab"
    onClick={[Function]}
  />
</div>
`;
